feat: agregar endpoints publicos de carreras
